--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,4 +60,5 @@ RUN echo "export PATH=/home/user/.local/bin:\$PATH" >> /home/user/.bashrc
 RUN echo "export LC_ALL=C.UTF-8 && export LANG=C.UTF-8" >> /home/user/.bashrc
 
 # Place your environment here
+RUN sudo apt-get update
 RUN sudo apt-get install -y yad xclip net-tools python3-tk
